--- a/index.html
+++ b/index.html
@@ -10,7 +10,11 @@
 <body>
 <h1>Implement the symbolic diff here</h1>
 <div id="container">
-
+<input type="text" id="input_formula" /> Enter polynom
+<input type="text" id="input_var" /> Enter Differential Variable
+</div>
+<div>
+   <span id="Result">Result: </span>
 </div>
 <div>
     <button id="demoButton">
